       is only a single test application there, but at least it is a start (it
       is not intended that there should be a large amount of such tests
       anyway).
     * Update cmake_minimum_required statements in CMake code.
     * Fix faulty assert statement in NCCFileUtils.cc.
     * More numerically stable rotation matrix determinant calculations.

v4.1.2 2025-02-26
     * Improve support for FreeBSD by actually running builds and CTests in CI
       on that platform, and fix the few issues uncovered by this.
     * Avoid _POSIX_C_SOURCE and _XOPEN_SOURCE on FreeBSD.
     * Explicitly link test apps and libraries against the backtrace library
       found by CMake.
     * Specify proper dependencies for tests/scripts/ncdevtoolchecks.py and
       tests/scripts/ncmatparser.py.

v4.1.0 2025-02-25
     * Added a new "virtual API", which allows NCrystal to be used as a runtime
       plugin in downstream applications, through usage of relevant abstract C++
       interfaces in a set of "virtual api" headers, which are guaranteed to
       remain stable across all NCrystal versions. A factory function is
       provided which can instantiate these interfaces, and it is available with
       C-bindings so downstream application can invoke it at runtime via either
       dlopen+dlsym or LoadLibrary+GetProcAddress, depending on a platform.  For
       now only one such "virtual api" header is provided, intended for usage in
       the OpenMC project.
     * An example project using NCrystal in this manner is provided in
       examples/virtualapi_project.
     * As an added bonus, applications desiring absolute ABI stability from
       NCrystal, can use the new "virtual API" interfaces to obtain that. This
       is true, even for applications with a more typical build-time dependency
       on NCrystal, and do not wish to open the NCrystal library dynamically at
       runtime. Currently the only actual example of such usage can be found in